# deployment-lab

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  qwen3.5-27b.sh  qwen3.5_27b.sh  server.py
api/: model_manager.py  routes.py  schemas.py
benchmark/: embedding_latency.py  rerank_latency.py
models/: base.py  embedding.py  factory.py  rerank.py
qwen3.5-27b/: autotune_vllm.sh  chat_template_new.jinna  docker-compose.yml
qwen3.5-35b/: docker-compose.yml  dockerfile
script/: autotune_run_qwen35_27b_fp8_5090.sh  autotune_run_qwen35_27b_fp8_5090_sglang.sh  bench_online_qwen35_awq.sh  bench_openai_stream.py  run_qwen35_27b_fp8_5090.sh  run_qwen35_27b_fp8_5090_sglang.sh
tests/: test_factory.py
tests/scripts/: test_api.py  test_jina_v2.py  test_models.py
